# v2-uri-parser

./: Cargo.toml  README.md
.github/workflows/: ci.yml  release.yml
scripts/: win-service-installer.ps1
src/: main.rs  xray_runner.rs
src/parser/: mod.rs  uri_identifier.rs
src/parser/shadow_socks/: data.rs  mod.rs
src/parser/socks/: data.rs  mod.rs
src/parser/trojan/: data.rs  mod.rs
src/parser/vless/: data.rs  mod.rs
src/parser/vmess/: data.rs  mod.rs
src/utils/: inbound_generator.rs  mod.rs
